# Randetect

./: .gitignore  .log_analyzer.sh.swp  Cargo.toml  README.md  ban_firewall.sh  build.sh  check_2pairs.sh  check_trio.sh  create_write_pairs.sql  cwp.sql  enable_firewall.sh  log_analyzer.sh  main  query1_comb_2pairs.sql  query2_comb_1p3el.sql  randetect.sh  range.sql  read_delete_pairs.sql  ttt
SQL_queries/: create_write_pairs.sql  huge_delete.sql  query1_comb_2pairs.sql  query2_comb_1p3el.sql  range.sql
install/: randetect.sh
script/: randetect.sh
src/: alert.rs  config.rs  database.rs  db.rs  email.rs  main.rs  nas.rs  parse.rs  query.rs
tools/: install.sh  randetect.sh  uninstall.sh
