[package]
name = "randetect"
version = "0.1.0"
authors = ["Antoine Barthelemy <abarthel@student.42.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]

[[bin]]
name = "randetect"
path = "src/main.rs"

[profile.release]
panic = 'abort'

[dependencies]
serde_json = "1.0"
