[package]
name = "randetect"
version = "1.0.0"
authors = ["CIL Lamballe<contact@cil-lamballe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]

[[bin]]
name = "randetect"
path = "src/main.rs"

[profile.release]
panic = 'abort'

[dependencies]
serde_json = "1.0"
sys-info = "0.7"
daemonize = "0.4.1"
